# rescute-api

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: security-audit.yml
alembic/: env.py
alembic/versions/: 001_initial.py  002_donation_intents.py  003_partner_negotiations.py  004_user_token_version.py
app/: config.py  dependencies.py  main.py  rate_limit.py
app/adapters/inbound/api/: adoption_router.py  ai_care_router.py  auth_router.py  cat_router.py  dashboard_router.py  donation_router.py  foster_router.py  partner_router.py  router.py  upload_router.py  user_router.py
app/adapters/inbound/api/middleware/: auth.py
app/adapters/inbound/api/schemas/: adoption.py  ai_care.py  auth.py  cat.py  donation.py  foster.py  partner.py  user.py
app/adapters/outbound/ai/: __init__.py  openai_provider.py
app/adapters/outbound/persistence/: adoption_repository.py  cat_repository.py  database.py  donation_repository.py  foster_repository.py  models.py  partner_repository.py  user_repository.py
app/application/: adoption_service.py  ai_care_service.py  auth_service.py  cat_service.py  donation_service.py  foster_service.py  partner_service.py  user_service.py
app/domain/: value_objects.py
app/domain/entities/: adoption.py  cat.py  donation.py  foster.py  partner.py  user.py
app/domain/ports/: __init__.py  ai_provider.py  repositories.py
docs/specs/: partner-negotiations-spec.md  profile-edit-spec.md
scripts/: seed.py
