[project]
name = "rescute-api"
version = "0.1.0"
description = "Rescute - Cat adoption and donation hub API"
authors = [
    {name = "Felipe",email = "felipevictor67@gmail.com"}
]
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi>=0.138.0,<0.139.0",
    "uvicorn[standard]>=0.49.0,<0.50.0",
    "sqlalchemy[asyncio]>=2.0.51,<3.0.0",
    "alembic>=1.18.4,<2.0.0",
    "pydantic>=2.13.4,<3.0.0",
    "pydantic-settings>=2.14.2,<3.0.0",
    "python-jose[cryptography]>=3.5.0,<4.0.0",
    "passlib[bcrypt]>=1.7.4,<2.0.0",
    "bcrypt>=4.0,<5.0",
    "asyncpg>=0.31.0,<0.32.0",
    "httpx>=0.28.1,<0.29.0",
    "email-validator>=2.3.0,<3.0.0",
    "python-multipart>=0.0.20,<0.0.21",
    "slowapi>=0.1.9,<0.2.0",
    "filetype>=1.2.0,<2.0.0",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
